# azure-iot-gateway-sdk

./: CMakeLists.txt
bindings/dotnet/tests/dotnet_e2e/: CMakeLists.txt
bindings/dotnetcore/: CMakeLists.txt
bindings/dotnetcore/src/: dotnetcore.cpp
bindings/dotnetcore/src/adapters/: dotnetcore_utils_linux.cpp
bindings/dotnetcore/tests/dotnetcore_e2e/: CMakeLists.txt
bindings/dotnetcore/tests/dotnetcore_ut/: dotnetcore_ut.cpp
bindings/java/src/: java_module_host.c
core/: CMakeLists.txt
core/adapters/: dynamic_library_linux.c
core/inc/: broker.h  message.h  module.h
core/inc/module_loaders/: dotnet_core_loader.h
core/iothub_proxy/: CMakeLists.txt
core/iothub_proxy/src/: iothub_proxy.cpp
core/src/: broker.c  gateway_ll.c  message.c
core/tests/dotnet_core_loader_ut/: dotnet_core_loader_ut.c
core/tests/gateway_e2e/: CMakeLists.txt
jenkins/: osx_c.sh  raspberrypi_c.sh
modules/: CMakeLists.txt
modules/hello_world/: CMakeLists.txt
modules/hello_world/inc/: hello_world.h  hello_world_common.h
modules/hello_world/src/: hello_world.c  hello_world_hl.c
modules/identitymap/: CMakeLists.txt
modules/identitymap/src/: identitymap.c
modules/identitymap/tests/: CMakeLists.txt
modules/logger/: CMakeLists.txt
modules/logger/inc/: logger_common.h
modules/logger/src/: logger.c  logger_hl.c
modules/rpc_sink/: CMakeLists.txt
modules/rpc_sink/inc/: rpc_sink.h
modules/rpc_sink/src/: devices.bond  devices_apply.cpp  devices_apply.h  devices_comm.cpp  devices_comm.h  devices_reflection.h  devices_types.cpp  devices_types.h  rpc_sink.c  rpc_sink.cpp
modules/rpc_source/: CMakeLists.txt
modules/rpc_source/inc/: rpc_source.h
modules/rpc_source/src/: rpc_source.c  rpc_source.cpp
proxy/modules/native_module_host/src/: native_module_host.c
samples/: CMakeLists.txt
samples/ble_gateway_hl/ble_printer/src/: ble_printer.c
samples/dotnet_core_module_sample/: CMakeLists.txt
samples/hello_world/: CMakeLists.txt
samples/hello_world/src/: hello_world_win.json
samples/rpc/: CMakeLists.txt
samples/rpc/src/: main.c  rpc_linux.json  rpc_windows.json
tools/: build.cmd  build.sh  build_dotnet_core.sh  windriver_linux_c.sh
